import "game_event.proto";
import "serverinfo_playerping.proto";

message Event_Ping {
	extend GameEvent {
		optional Event_Ping ext = 1008;
	}
	optional uint32 seconds_elapsed = 1;
	repeated ServerInfo_PlayerPing ping_list = 2;
}
